# lean-os

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  THIRD-PARTY-LICENSES.md  changelog.md
scripts/nous/: Makefile  README.md  __init__.py  architecture.md  pyproject.toml
scripts/nous/application/: __init__.py  config.py  dependencies.py  seeded_discovery.py  snapshot_builder.py  source_discovery.py  ui.py
scripts/nous/application/stages/: __init__.py  analysis.py  base.py  crawling.py  discovery.py  extraction.py  synthesis.py
scripts/nous/domain/: __init__.py  constants.py  entities.py  exceptions.py
scripts/nous/examples/: duckduckgo_test.py  quick_start.py  real_world_test.py  snapshot_test.py  test_groq_client.py  test_snapshot_builder.py
scripts/nous/infrastructure/: __init__.py  logging.py
scripts/nous/infrastructure/analysis/: __init__.py  consensus_detector.py
scripts/nous/infrastructure/crawlers/: __init__.py  browser_config.py  content_crawler.py  diagnostics.py  link_analyzer.py  link_expander.py  page_snapshot.py  parallel_crawler.py  schema_manager.py  screenshot_extractor.py  search_api.py  serp_crawler.py  session_manager.py  snapshot_capture.py  url_seeder.py  zone_config.py
scripts/nous/infrastructure/extraction/: __init__.py  content_filter.py  hybrid_extractor.py  idea_extractor.py  metadata_extractor.py
scripts/nous/infrastructure/llm/: __init__.py  client.py  groq_limiter.py
scripts/nous/interface/: __init__.py  cli.py
scripts/nous/reports/json/: ai_agents_autonomous_2025_20260101_153404.json  (+4 more)
(+715 files in other folders)
