[tool.poetry]
name = "nous"
version = "0.1.0"
description = "Noosphere Snapshot Engine - Automated knowledge synthesis"
readme = "README.md"
license = "MIT"
authors = ["Bella <bella@example.com>"]
keywords = ["web-scraping", "knowledge-graph", "llm", "crawling", "search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = ">=2.0"
crawl4ai = ">=0.7.0"
litellm = ">=1.0"
scikit-learn = ">=1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21"
ruff = ">=0.1"
mypy = ">=1.0"

[tool.poetry.scripts]
nous = "nous.interface.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
